[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes_Scripts/InventoryHUD.gd" type="Script" id=1]
[ext_resource path="res://KarmaFuture.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/Up.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 41
font_data = ExtResource( 2 )

[node name="InventoryHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="InventoryBackground" type="ColorRect" parent="."]
margin_left = 30.0
margin_top = 75.0
margin_right = 750.0
margin_bottom = 525.0
color = Color( 0.0745098, 0.0705882, 0.25098, 0.560784 )
__meta__ = {
"_edit_lock_": true
}

[node name="InventoryH1Label" type="Label" parent="."]
margin_left = 37.0
margin_top = 84.0
margin_right = 205.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="InventoryH2Label" type="Label" parent="."]
margin_left = 210.421
margin_top = 84.0
margin_right = 378.421
margin_bottom = 517.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="InventoryH3Label" type="Label" parent="."]
margin_left = 380.947
margin_top = 84.0
margin_right = 548.947
margin_bottom = 517.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="InventoryH4Label" type="Label" parent="."]
margin_left = 573.579
margin_top = 84.0
margin_right = 741.579
margin_bottom = 517.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="IndexLabel" type="Label" parent="."]
margin_left = 849.0
margin_top = 271.0
margin_right = 910.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="HealthLabel" type="Label" parent="."]
margin_right = 39.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "HP: "
__meta__ = {
"_edit_lock_": true
}

[node name="HealthNumberLabel" type="Label" parent="."]
margin_left = 37.0
margin_top = 1.0
margin_right = 125.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Up" type="Button" parent="."]
margin_left = 850.0
margin_top = 195.854
margin_right = 905.372
margin_bottom = 250.854
icon = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Right" type="Button" parent="."]
margin_left = 966.557
margin_top = 252.243
margin_right = 1028.56
margin_bottom = 307.243
rect_rotation = 90.0
icon = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Down" type="Button" parent="."]
margin_left = 910.54
margin_top = 370.802
margin_right = 972.54
margin_bottom = 425.802
rect_rotation = 180.0
icon = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="Button" parent="."]
margin_left = 794.997
margin_top = 314.293
margin_right = 856.997
margin_bottom = 369.293
rect_rotation = 270.0
icon = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Use" type="Button" parent="."]
margin_left = 768.0
margin_top = 409.911
margin_right = 989.0
margin_bottom = 482.911
custom_fonts/font = SubResource( 2 )
text = "Use"

[node name="Back" type="Button" parent="."]
margin_left = 5.23785
margin_top = 589.871
margin_right = 67.2379
margin_bottom = 644.871
rect_rotation = -90.0
icon = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Use" to="." method="_on_Use_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
